creation of details model
